@@ -231,8 +231,8 @@ command, displaying shell output above the prompt: >lua
     -- Handles output from the shell.
     local function on_output(_, msg, _)
       -- Add shell output above the prompt.
-      local input_start = vim.api.nvim_buf_get_mark(0, ":")[1]
-      vim.fn.append(input_start - 1, msg)
+      local buf = vim.api.nvim_get_current_buf()
+      vim.fn.prompt_appendbuffer(buf, msg)
     end
 
     -- Handles the shell exit.
