@@ -7570,6 +7570,31 @@ printf({fmt}, {expr1} ...)                                            *printf()*
                 Return: ~
                   (`string`)
 
+prompt_appendbuffer({buf}, {text})                       *prompt_appendbuffer()*
+		Appends text to prompt buffer before current prompt. When {text} is
+		a |List|: Append each item of the |List| as a text line above
+		prompt-line in the buffer. Any type of item is accepted and converted
+		to a String. Returns 1 for failure ({buf} not a prmopt buffer),
+		0 for success.  When {text} is an empty list zero is returned.
+
+		Example: >vim
+		  func TextEntered(text)
+		    call prompt_appendbuffer(bufnr(''), split('Entered: "' . a:text . '"', '\n'))
+		  endfunc
+
+		  set buftype=prompt
+		  call prompt_setcallback(bufnr(''), function("TextEntered"))
+		  eval bufnr("")->prompt_setprompt("cmd: ")
+		  startinsert
+<
+
+                Parameters: ~
+                  • {buf} (`integer|string`)
+                  • {text} (`string|string[]`)
+
+                Return: ~
+                  (`0|1`)
+
 prompt_getinput({buf})                                       *prompt_getinput()*
 		Gets the current user-input in |prompt-buffer| {buf} without invoking
 		prompt_callback. {buf} can be a buffer name or number.
