@@ -6888,6 +6888,28 @@ function vim.fn.prevnonblank(lnum) end
 --- @return string
 function vim.fn.printf(fmt, expr1) end
 
+--- Appends text to prompt buffer before current prompt. When {text} is
+--- a |List|: Append each item of the |List| as a text line above
+--- prompt-line in the buffer. Any type of item is accepted and converted
+--- to a String. Returns 1 for failure ({buf} not a prmopt buffer),
+--- 0 for success.  When {text} is an empty list zero is returned.
+---
+--- Example: >vim
+---   func TextEntered(text)
+---     call prompt_appendbuffer(bufnr(''), split('Entered: "' . a:text . '"', '\n'))
+---   endfunc
+---
+---   set buftype=prompt
+---   call prompt_setcallback(bufnr(''), function("TextEntered"))
+---   eval bufnr("")->prompt_setprompt("cmd: ")
+---   startinsert
+--- <
+---
+--- @param buf integer|string
+--- @param text string|string[]
+--- @return 0|1
+function vim.fn.prompt_appendbuffer(buf, text) end
+
 --- Gets the current user-input in |prompt-buffer| {buf} without invoking
 --- prompt_callback. {buf} can be a buffer name or number.
 ---
