@@ -33,7 +33,7 @@ describe('prompt buffer', function()
           close
         else
           " Add the output above the current prompt.
-          call append(line("$") - 1, split('Command: "' . a:text . '"', '\n'))
+          call prompt_appendbuffer(bufnr(''), split('Command: "' . a:text . '"', '\n'))
           " Reset &modified to allow the buffer to be closed.
           set nomodified
           call timer_start(20, {id -> TimerFunc(a:text)})
@@ -42,7 +42,7 @@ describe('prompt buffer', function()
 
       func TimerFunc(text)
         " Add the output above the current prompt.
-        call append(line("$") - 1, split('Result: "' . a:text .'"', '\n'))
+        call prompt_appendbuffer(bufnr(''),  split('Result: "' . a:text .'"', '\n'))
         " Reset &modified to allow the buffer to be closed.
         set nomodified
       endfunc
